# outbound-freight

./: .gitignore  CLAUDE.md  README.md  TODO.md  main.py  pyproject.toml
docs/: analysis_schema.md  fedex_schema.md  ups_schema.md
outbound_freight/: __init__.py  cli.py  drive_client.py  file_reader.py  vendor_detection.py
quick/: quick.ipynb  quick.py
src/: __init__.py  config.py  initial_planning.py  main.py  pipeline.py
src/analysis/: __init__.py  aggregator.py  basket.py  calculator.py  reporter.py  shares.py
src/etl/: __init__.py  cleaner.py  file_discovery.py  mapper.py  merger.py  reader.py
src/integration/: __init__.py  fallback.py  matcher.py  quality.py  snowflake.py
src/vendors/: __init__.py  base.py  detector.py  fedex.py  ups.py  usps.py
tests/: conftest.py  test_file_reader.py  test_vendor_detection.py
