[project]
name = "outbound-freight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.126.0",
    "ipykernel>=6.30.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
]

[tool]
